# beam-patcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  config.example.yml  patchlist.example.txt  version.example.json
ISSUE_TEMPLATE/: bug_report.md  feature_request.md  theme_submission.md
beam-core/: Cargo.toml
beam-core/src/: client_checker.rs  config.rs  downloader.rs  error.rs  game_settings.rs  lib.rs  parallel_downloader.rs  patcher.rs  server_checker.rs  sso.rs  updater.rs  verifier.rs
beam-formats/: Cargo.toml
beam-formats/src/: beam.rs  error.rs  gpf.rs  grf.rs  lib.rs  rgz.rs  thor.rs
beam-patcher/: Cargo.toml
beam-patcher/src/: main.rs
beam-ui/: Cargo.toml  tauri.conf.json
beam-ui/icons/: README.txt
beam-ui/public/: index.html
beam-ui/src/: commands.rs  lib.rs
examples/: README.txt  news.json  status.json
themes/: README.md
themes/default/: README.md
workflows/: ci.yml  release.yml
