[package]
name = "beam-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
crc32fast = { workspace = true }
md5 = { workspace = true }
des = { workspace = true }
bytes = { workspace = true }
